--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,33 @@
-blinker==1.9.0
-click==8.3.0
+# --- Flask Core ---
 Flask==3.1.2
 Flask-SQLAlchemy==3.1.1
-greenlet==3.2.4
+flask-cors==6.0.1
+SQLAlchemy==2.0.43
+Werkzeug==3.1.3
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
-numpy==2.2.6
-opencv-python==4.12.0.88
+blinker==1.9.0
+click==8.3.0
+greenlet==3.2.4
+
+# --- OCR & Image Processing ---
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+pillow
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
+easyocr==1.7.2
+
+# --- Thai NLP (NER / Tokenizer) ---
+pythainlp>=5.0.0
+python-crfsuite==0.9.9
+python-Levenshtein==0.27.1
+
+# --- Database & Config ---
 PyMySQL==1.1.2
-pytesseract==0.3.13
 python-dotenv==1.1.1
-SQLAlchemy==2.0.43
-typing_extensions==4.15.0
-Werkzeug==3.1.3
+
+# --- Utility & Optional Tools ---
+tqdm
